# Multiple_Disease_Prediction

./: .gitignore  README.md  app.py  app1.py  demo.py  pyproject.toml  requirements.txt  setup.py  templete.py
notebooks/: Advance Project Diabetes Prediction Using ML.ipynb  Advance Project Heart Disease Prediction Using ML.ipynb  Advance Project Kidney Disease Prediction Using ML.ipynb  data.csv  mongoDB_demo.ipynb
notebooks/saved_models/: heart_model.pkl  kidney_model.pkl
saved_models/: diabetes_model.pkl  heart_model.pkl  kidney_model.pkl
src/cloud_storage/: aws_storage.py
src/constants/: __init__.py
src/diseases/diabetes/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py
src/diseases/diabetes/config/: schema.yaml
src/diseases/diabetes/data_access/: diabetes_data.py
src/diseases/diabetes/pipeline/: diabetes_training_pipeline.py  prediction_pipeline.py
src/diseases/heart/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/diseases/heart/config/: schema.yaml
src/diseases/heart/data_access/: heart_data.py
src/diseases/kidney/config/: schema.yaml
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/notebooks/: Advance Project Heart Disease Prediction Using ML.ipynb  Advance Project Kidney Disease Prediction Using ML.ipynb  data.csv  diabetes.pkl  diabetes_ml_notebook.ipynb  mongoDB_demo.ipynb
src/notebooks/saved_models/: diabetes_model.pkl  kidney_model.pkl
src/utils/: main_utils.py
(+9 files in other folders)
