[project]
name = "src"
version = "0.0.1"
description = "This is a project on multiple disase prediction using machine learning and MLOps"
authors = [{name = "Samrat Roychoudhury", email = "samrat.rc47@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}